src/pyyc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE
    DIVIDE
    TIMES

Grammar

Rule 0     S' -> program
Rule 1     program -> module
Rule 2     module -> statements
Rule 3     simple_statement -> PRINT expression
Rule 4     simple_statement -> target ASSIGN expression
Rule 5     simple_statement -> expression
Rule 6     simple_statement -> target
Rule 7     expression -> NAME
Rule 8     expression -> TRUE
Rule 9     expression -> FALSE
Rule 10    expression -> INT
Rule 11    expression -> FLOAT
Rule 12    expression -> STRING
Rule 13    expression -> LPAREN expression RPAREN
Rule 14    expression -> MINUS expression
Rule 15    expression -> expression PLUS expression
Rule 16    expression -> INPUT LPAREN RPAREN
Rule 17    simple_statement -> MEMCPY LPAREN expr_list RPAREN
Rule 18    simple_statement -> MEMSET LPAREN expr_list RPAREN
Rule 19    empty -> <empty>
Rule 20    expression -> NOT expression
Rule 21    expression -> expression AND expression
Rule 22    expression -> expression OR expression
Rule 23    expression -> expression EQ expression
Rule 24    expression -> expression NEQ expression
Rule 25    expression -> expression IS expression
Rule 26    expression -> expression IF expression ELSE expression
Rule 27    expression -> LSQUARE expr_list RSQUARE
Rule 28    expression -> LCURLY key_datum_list RCURLY
Rule 29    expression -> subscription
Rule 30    subscription -> expression LSQUARE expression RSQUARE
Rule 31    target -> NAME
Rule 32    target -> NAME LPAREN expression RPAREN
Rule 33    target -> subscription
Rule 34    key_datum -> expression COLON expression
Rule 35    key_datum_list -> empty
Rule 36    key_datum_list -> key_datum
Rule 37    key_datum_list -> key_datum_list COMMA key_datum
Rule 38    expr_list -> empty
Rule 39    expr_list -> expression
Rule 40    expr_list -> expr_list COMMA expression
Rule 41    expression -> expression LPAREN expr_list RPAREN
Rule 42    expression -> LAMBDA id_list COLON expression
Rule 43    id_list -> empty
Rule 44    id_list -> NAME
Rule 45    id_list -> id_list COMMA NAME
Rule 46    statement -> simple_statement
Rule 47    statement -> compound_statement
Rule 48    simple_statement -> RETURN expression
Rule 49    compound_statement -> DEF NAME LPAREN id_list RPAREN COLON suite
Rule 50    suite -> INDENT statements DEDENT
Rule 51    statements -> statement
Rule 52    statements -> statements statement
Rule 53    simple_statement -> IF expression COLON suite ELSE COLON suite
Rule 54    simple_statement -> WHILE expression COLON suite

Terminals, with rules where they appear

AND                  : 21
ASSIGN               : 4
COLON                : 34 42 49 53 53 54
COMMA                : 37 40 45
DEDENT               : 50
DEF                  : 49
DIVIDE               : 
ELSE                 : 26 53
EQ                   : 23
FALSE                : 9
FLOAT                : 11
IF                   : 26 53
INDENT               : 50
INPUT                : 16
INT                  : 10
IS                   : 25
LAMBDA               : 42
LCURLY               : 28
LPAREN               : 13 16 17 18 32 41 49
LSQUARE              : 27 30
MEMCPY               : 17
MEMSET               : 18
MINUS                : 14
NAME                 : 7 31 32 44 45 49
NEQ                  : 24
NEWLINE              : 
NOT                  : 20
OR                   : 22
PLUS                 : 15
PRINT                : 3
RCURLY               : 28
RETURN               : 48
RPAREN               : 13 16 17 18 32 41 49
RSQUARE              : 27 30
STRING               : 12
TIMES                : 
TRUE                 : 8
WHILE                : 54
error                : 

Nonterminals, with rules where they appear

compound_statement   : 47
empty                : 35 38 43
expr_list            : 17 18 27 40 41
expression           : 3 4 5 13 14 15 15 20 21 21 22 22 23 23 24 24 25 25 26 26 26 30 30 32 34 34 39 40 41 42 48 53 54
id_list              : 42 45 49
key_datum            : 36 37
key_datum_list       : 28 37
module               : 1
program              : 0
simple_statement     : 46
statement            : 51 52
statements           : 2 50 52
subscription         : 29 33
suite                : 49 53 53 54
target               : 4 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . module
    (2) module -> . statements
    (51) statements -> . statement
    (52) statements -> . statements statement
    (46) statement -> . simple_statement
    (47) statement -> . compound_statement
    (3) simple_statement -> . PRINT expression
    (4) simple_statement -> . target ASSIGN expression
    (5) simple_statement -> . expression
    (6) simple_statement -> . target
    (17) simple_statement -> . MEMCPY LPAREN expr_list RPAREN
    (18) simple_statement -> . MEMSET LPAREN expr_list RPAREN
    (48) simple_statement -> . RETURN expression
    (53) simple_statement -> . IF expression COLON suite ELSE COLON suite
    (54) simple_statement -> . WHILE expression COLON suite
    (49) compound_statement -> . DEF NAME LPAREN id_list RPAREN COLON suite
    (31) target -> . NAME
    (32) target -> . NAME LPAREN expression RPAREN
    (33) target -> . subscription
    (7) expression -> . NAME
    (8) expression -> . TRUE
    (9) expression -> . FALSE
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . STRING
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . MINUS expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . INPUT LPAREN RPAREN
    (20) expression -> . NOT expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NEQ expression
    (25) expression -> . expression IS expression
    (26) expression -> . expression IF expression ELSE expression
    (27) expression -> . LSQUARE expr_list RSQUARE
    (28) expression -> . LCURLY key_datum_list RCURLY
    (29) expression -> . subscription
    (41) expression -> . expression LPAREN expr_list RPAREN
    (42) expression -> . LAMBDA id_list COLON expression
    (30) subscription -> . expression LSQUARE expression RSQUARE

    PRINT           shift and go to state 8
    MEMCPY          shift and go to state 11
    MEMSET          shift and go to state 4
    RETURN          shift and go to state 1
    IF              shift and go to state 21
    WHILE           shift and go to state 7
    DEF             shift and go to state 12
    NAME            shift and go to state 3
    TRUE            shift and go to state 10
    FALSE           shift and go to state 22
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    STRING          shift and go to state 18
    LPAREN          shift and go to state 19
    MINUS           shift and go to state 14
    INPUT           shift and go to state 20
    NOT             shift and go to state 27
    LSQUARE         shift and go to state 2
    LCURLY          shift and go to state 24
    LAMBDA          shift and go to state 29

    statements                     shift and go to state 9
    target                         shift and go to state 23
    compound_statement             shift and go to state 13
    simple_statement               shift and go to state 5
    module                         shift and go to state 6
    program                        shift and go to state 15
    statement                      shift and go to state 16
    expression                     shift and go to state 28
    subscription                   shift and go to state 17

state 1

    (48) simple_statement -> RETURN . expression
    (7) expression -> . NAME
    (8) expression -> . TRUE
    (9) expression -> . FALSE
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . STRING
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . MINUS expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . INPUT LPAREN RPAREN
    (20) expression -> . NOT expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NEQ expression
    (25) expression -> . expression IS expression
    (26) expression -> . expression IF expression ELSE expression
    (27) expression -> . LSQUARE expr_list RSQUARE
    (28) expression -> . LCURLY key_datum_list RCURLY
    (29) expression -> . subscription
    (41) expression -> . expression LPAREN expr_list RPAREN
    (42) expression -> . LAMBDA id_list COLON expression
    (30) subscription -> . expression LSQUARE expression RSQUARE

    NAME            shift and go to state 31
    TRUE            shift and go to state 10
    FALSE           shift and go to state 22
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    STRING          shift and go to state 18
    LPAREN          shift and go to state 19
    MINUS           shift and go to state 14
    INPUT           shift and go to state 20
    NOT             shift and go to state 27
    LSQUARE         shift and go to state 2
    LCURLY          shift and go to state 24
    LAMBDA          shift and go to state 29

    expression                     shift and go to state 32
    subscription                   shift and go to state 30

state 2

    (27) expression -> LSQUARE . expr_list RSQUARE
    (38) expr_list -> . empty
    (39) expr_list -> . expression
    (40) expr_list -> . expr_list COMMA expression
    (19) empty -> .
    (7) expression -> . NAME
    (8) expression -> . TRUE
    (9) expression -> . FALSE
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . STRING
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . MINUS expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . INPUT LPAREN RPAREN
    (20) expression -> . NOT expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NEQ expression
    (25) expression -> . expression IS expression
    (26) expression -> . expression IF expression ELSE expression
    (27) expression -> . LSQUARE expr_list RSQUARE
    (28) expression -> . LCURLY key_datum_list RCURLY
    (29) expression -> . subscription
    (41) expression -> . expression LPAREN expr_list RPAREN
    (42) expression -> . LAMBDA id_list COLON expression
    (30) subscription -> . expression LSQUARE expression RSQUARE

    RSQUARE         reduce using rule 19 (empty -> .)
    COMMA           reduce using rule 19 (empty -> .)
    NAME            shift and go to state 31
    TRUE            shift and go to state 10
    FALSE           shift and go to state 22
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    STRING          shift and go to state 18
    LPAREN          shift and go to state 19
    MINUS           shift and go to state 14
    INPUT           shift and go to state 20
    NOT             shift and go to state 27
    LSQUARE         shift and go to state 2
    LCURLY          shift and go to state 24
    LAMBDA          shift and go to state 29

    expr_list                      shift and go to state 33
    expression                     shift and go to state 35
    empty                          shift and go to state 34
    subscription                   shift and go to state 30

state 3

    (31) target -> NAME .
    (32) target -> NAME . LPAREN expression RPAREN
    (7) expression -> NAME .

  ! shift/reduce conflict for LPAREN resolved as shift
  ! reduce/reduce conflict for IF resolved using rule 7 (expression -> NAME .)
  ! shift/reduce conflict for LPAREN resolved as shift
  ! reduce/reduce conflict for LSQUARE resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for PRINT resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for MEMCPY resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for MEMSET resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for RETURN resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for WHILE resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for DEF resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for NAME resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for TRUE resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for FALSE resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for INT resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for FLOAT resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for STRING resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for MINUS resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for INPUT resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for NOT resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for LCURLY resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for LAMBDA resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for $end resolved using rule 7 (expression -> NAME .)
  ! reduce/reduce conflict for DEDENT resolved using rule 7 (expression -> NAME .)
    ASSIGN          reduce using rule 31 (target -> NAME .)
    LPAREN          shift and go to state 36
    PLUS            reduce using rule 7 (expression -> NAME .)
    AND             reduce using rule 7 (expression -> NAME .)
    OR              reduce using rule 7 (expression -> NAME .)
    EQ              reduce using rule 7 (expression -> NAME .)
    NEQ             reduce using rule 7 (expression -> NAME .)
    IS              reduce using rule 7 (expression -> NAME .)
    IF              reduce using rule 7 (expression -> NAME .)
    LSQUARE         reduce using rule 7 (expression -> NAME .)
    PRINT           reduce using rule 7 (expression -> NAME .)
    MEMCPY          reduce using rule 7 (expression -> NAME .)
    MEMSET          reduce using rule 7 (expression -> NAME .)
    RETURN          reduce using rule 7 (expression -> NAME .)
    WHILE           reduce using rule 7 (expression -> NAME .)
    DEF             reduce using rule 7 (expression -> NAME .)
    NAME            reduce using rule 7 (expression -> NAME .)
    TRUE            reduce using rule 7 (expression -> NAME .)
    FALSE           reduce using rule 7 (expression -> NAME .)
    INT             reduce using rule 7 (expression -> NAME .)
    FLOAT           reduce using rule 7 (expression -> NAME .)
    STRING          reduce using rule 7 (expression -> NAME .)
    MINUS           reduce using rule 7 (expression -> NAME .)
    INPUT           reduce using rule 7 (expression -> NAME .)
    NOT             reduce using rule 7 (expression -> NAME .)
    LCURLY          reduce using rule 7 (expression -> NAME .)
    LAMBDA          reduce using rule 7 (expression -> NAME .)
    $end            reduce using rule 7 (expression -> NAME .)
    DEDENT          reduce using rule 7 (expression -> NAME .)

  ! DEDENT          [ reduce using rule 31 (target -> NAME .) ]
  ! PRINT           [ reduce using rule 31 (target -> NAME .) ]
  ! MEMCPY          [ reduce using rule 31 (target -> NAME .) ]
  ! MEMSET          [ reduce using rule 31 (target -> NAME .) ]
  ! RETURN          [ reduce using rule 31 (target -> NAME .) ]
  ! IF              [ reduce using rule 31 (target -> NAME .) ]
  ! WHILE           [ reduce using rule 31 (target -> NAME .) ]
  ! DEF             [ reduce using rule 31 (target -> NAME .) ]
  ! NAME            [ reduce using rule 31 (target -> NAME .) ]
  ! TRUE            [ reduce using rule 31 (target -> NAME .) ]
  ! FALSE           [ reduce using rule 31 (target -> NAME .) ]
  ! INT             [ reduce using rule 31 (target -> NAME .) ]
  ! FLOAT           [ reduce using rule 31 (target -> NAME .) ]
  ! STRING          [ reduce using rule 31 (target -> NAME .) ]
  ! LPAREN          [ reduce using rule 31 (target -> NAME .) ]
  ! MINUS           [ reduce using rule 31 (target -> NAME .) ]
  ! INPUT           [ reduce using rule 31 (target -> NAME .) ]
  ! NOT             [ reduce using rule 31 (target -> NAME .) ]
  ! LSQUARE         [ reduce using rule 31 (target -> NAME .) ]
  ! LCURLY          [ reduce using rule 31 (target -> NAME .) ]
  ! LAMBDA          [ reduce using rule 31 (target -> NAME .) ]
  ! $end            [ reduce using rule 31 (target -> NAME .) ]
  ! LPAREN          [ reduce using rule 7 (expression -> NAME .) ]


state 4

    (18) simple_statement -> MEMSET . LPAREN expr_list RPAREN

    LPAREN          shift and go to state 37


state 5

    (46) statement -> simple_statement .

    PRINT           reduce using rule 46 (statement -> simple_statement .)
    MEMCPY          reduce using rule 46 (statement -> simple_statement .)
    MEMSET          reduce using rule 46 (statement -> simple_statement .)
    RETURN          reduce using rule 46 (statement -> simple_statement .)
    IF              reduce using rule 46 (statement -> simple_statement .)
    WHILE           reduce using rule 46 (statement -> simple_statement .)
    DEF             reduce using rule 46 (statement -> simple_statement .)
    NAME            reduce using rule 46 (statement -> simple_statement .)
    TRUE            reduce using rule 46 (statement -> simple_statement .)
    FALSE           reduce using rule 46 (statement -> simple_statement .)
    INT             reduce using rule 46 (statement -> simple_statement .)
    FLOAT           reduce using rule 46 (statement -> simple_statement .)
    STRING          reduce using rule 46 (statement -> simple_statement .)
    LPAREN          reduce using rule 46 (statement -> simple_statement .)
    MINUS           reduce using rule 46 (statement -> simple_statement .)
    INPUT           reduce using rule 46 (statement -> simple_statement .)
    NOT             reduce using rule 46 (statement -> simple_statement .)
    LSQUARE         reduce using rule 46 (statement -> simple_statement .)
    LCURLY          reduce using rule 46 (statement -> simple_statement .)
    LAMBDA          reduce using rule 46 (statement -> simple_statement .)
    $end            reduce using rule 46 (statement -> simple_statement .)
    DEDENT          reduce using rule 46 (statement -> simple_statement .)


state 6

    (1) program -> module .

    $end            reduce using rule 1 (program -> module .)


state 7

    (54) simple_statement -> WHILE . expression COLON suite
    (7) expression -> . NAME
    (8) expression -> . TRUE
    (9) expression -> . FALSE
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . STRING
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . MINUS expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . INPUT LPAREN RPAREN
    (20) expression -> . NOT expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NEQ expression
    (25) expression -> . expression IS expression
    (26) expression -> . expression IF expression ELSE expression
    (27) expression -> . LSQUARE expr_list RSQUARE
    (28) expression -> . LCURLY key_datum_list RCURLY
    (29) expression -> . subscription
    (41) expression -> . expression LPAREN expr_list RPAREN
    (42) expression -> . LAMBDA id_list COLON expression
    (30) subscription -> . expression LSQUARE expression RSQUARE

    NAME            shift and go to state 31
    TRUE            shift and go to state 10
    FALSE           shift and go to state 22
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    STRING          shift and go to state 18
    LPAREN          shift and go to state 19
    MINUS           shift and go to state 14
    INPUT           shift and go to state 20
    NOT             shift and go to state 27
    LSQUARE         shift and go to state 2
    LCURLY          shift and go to state 24
    LAMBDA          shift and go to state 29

    expression                     shift and go to state 38
    subscription                   shift and go to state 30

state 8

    (3) simple_statement -> PRINT . expression
    (7) expression -> . NAME
    (8) expression -> . TRUE
    (9) expression -> . FALSE
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . STRING
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . MINUS expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . INPUT LPAREN RPAREN
    (20) expression -> . NOT expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NEQ expression
    (25) expression -> . expression IS expression
    (26) expression -> . expression IF expression ELSE expression
    (27) expression -> . LSQUARE expr_list RSQUARE
    (28) expression -> . LCURLY key_datum_list RCURLY
    (29) expression -> . subscription
    (41) expression -> . expression LPAREN expr_list RPAREN
    (42) expression -> . LAMBDA id_list COLON expression
    (30) subscription -> . expression LSQUARE expression RSQUARE

    NAME            shift and go to state 31
    TRUE            shift and go to state 10
    FALSE           shift and go to state 22
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    STRING          shift and go to state 18
    LPAREN          shift and go to state 19
    MINUS           shift and go to state 14
    INPUT           shift and go to state 20
    NOT             shift and go to state 27
    LSQUARE         shift and go to state 2
    LCURLY          shift and go to state 24
    LAMBDA          shift and go to state 29

    expression                     shift and go to state 39
    subscription                   shift and go to state 30

state 9

    (2) module -> statements .
    (52) statements -> statements . statement
    (46) statement -> . simple_statement
    (47) statement -> . compound_statement
    (3) simple_statement -> . PRINT expression
    (4) simple_statement -> . target ASSIGN expression
    (5) simple_statement -> . expression
    (6) simple_statement -> . target
    (17) simple_statement -> . MEMCPY LPAREN expr_list RPAREN
    (18) simple_statement -> . MEMSET LPAREN expr_list RPAREN
    (48) simple_statement -> . RETURN expression
    (53) simple_statement -> . IF expression COLON suite ELSE COLON suite
    (54) simple_statement -> . WHILE expression COLON suite
    (49) compound_statement -> . DEF NAME LPAREN id_list RPAREN COLON suite
    (31) target -> . NAME
    (32) target -> . NAME LPAREN expression RPAREN
    (33) target -> . subscription
    (7) expression -> . NAME
    (8) expression -> . TRUE
    (9) expression -> . FALSE
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . STRING
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . MINUS expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . INPUT LPAREN RPAREN
    (20) expression -> . NOT expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . expression EQ expression
    (24) expression -> . expression NEQ expression
    (25) expression -> . expression IS expression
    (26) expression -> . expression IF expression ELSE expression
    (27) expression -> . LSQUARE expr_list RSQUARE
    (28) expression -> . LCURLY key_datum_list RCURLY
    (29) expression -> . subscription
    (41) expression -> . expression LPAREN expr_list RPAREN
    (42) expression -> . LAMBDA id_list COLON expression
    (30) subscription -> . expression LSQUARE expression RSQUARE

    $end            reduce using rule 2 (module -> statements .)
    PRINT           shift and go to state 8
    MEMCPY          shift and go to state 11
    MEMSET          shift and go to state 4
    RETURN          shift and go to state 1
    IF              shift and go to state 21
    WHILE           shift and go to state 7
    DEF             shift and go to state 12
    NAME            shift and go to state 3
    TRUE            shift and go to state 10
    FALSE           shift and go to state 22
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    STRING          shift and go to state 18
    LPAREN          shift and go to state 19
    MINUS           shift and go to state 14
    INPUT           shift and go to state 20
    NOT             shift and go to state 27
    LSQUARE         shift and go to state 2
    LCURLY          shift and go to state 24
    LAMBDA          shift and go to state 29

    target                         shift and go to state 23
    compound_statement             shift and go to state 13
    simple_statement               shift and go to state 5
    statement                      shift and go to state 40
    expression                     shift and go to state 28
    subscription                   shift and go to state 17

state 10

    (8) expression -> TRUE .
